feat(stopwatch): add functionality
- add interface
- add styling
- add js logic
- refactor

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="stopwatchStyle.css" type="text/css">
 </head>
 <body>
+<h1>Stopwatch Demo</h1>
+<div id="elapsedTime"></div>
+<div>
+    <button id="start-stop" class="button">Start/Stop</button>
+    <button id="reset" class="button">Reset</button>
+    <button id="recordTime" class="button">Record Time</button>
+</div>
+<div>
+    <p class="subtitle">Past Times</p>
+    <div id="pastTimes"></div>
+</div>
 <script src="stopwatch.js"></script>
 </body>
 </html>
